<resources>
    <string name="app_name" translatable="false">Simon Taps</string>

    //---------------MainActivity--------------------------
    <string name="join_button">JOIN</string>
    <string name="create_button">CREATE</string>
    <string name="edit_text">Room ID</string>
    <string name="simon_taps">This is the simon taps logo</string>

    <string name="invalid_room">Invalid room ID</string>
    <string name="exit">Are you sure you want to exit?</string>
    <string name="room_exists">Room already exists</string>
    <string name="room_not_exists">Room doesn\'t exist</string>
    <string name="room_full">Room is full</string>

    <string name="no_internet">No internet connection!</string>
    <string name="outdated">You are using an outdated version of the application! Please download the latest version!</string>

    //---------------SettingsActivity------------------------------
    <string name="settings">Settings</string>

    <string name="gameplay_category">Gameplay</string>
    <string name="background_title">Color scheme</string>
    <string name="background_dialog_title">Background color</string>
    <string name="background_dark">Dark</string>
    <string name="background_light">Light</string>

    <string name="general_category">General</string>

    <string name="language_title">Language</string>
    <string name="language_dialog_title">Choose a language!</string>
    <string name="language_english" translatable="false">English</string>
    <string name="language_hungarian" translatable="false">Magyar</string>

    <string name="vibration_title">Vibrations</string>
    <string name="coupons">Coupons</string>

    <string name="other_category">Other</string>

    <string name="contact_us_title">Contact us</string>
    <string name="email_address" translatable="false">dev@mabelabs.com</string>

    <string name="version_title">Current version</string>


    //----------------GameActivity------------------------
    <string name="room_id">Room ID:</string>
    <string name="round">Round</string>
    <string name="bust">Bust image</string>
    <string name="leave">Are you sure you want to leave the room?</string>

    <string name="prepare">Prepare for the game</string>
    <string name="round_started">The round has started!</string>


    //-----------------EndScreenActivity---------------------
    <string name="result_picture">Picture about a cat</string>

    <string name="score">"Your score:"</string>
    <string name="pos1">Nice!</string>
    <string name="pos2">Good job!</string>
    <string name="pos3">Great job!</string>
    <string name="pos4">Impressive!</string>
    <string name="pos5">Nailed it!</string>
    <string name="pos6" translatable="false">wtf</string>
    <string name="pos7" translatable="false">hacker!</string>
    <string name="pos8">Find the easter egg!</string>

    <string name="coupon_received">You have received a coupon:</string>

    <string name="restart">Restart</string>

    <string name="back_to_menu">Back to menu?</string>

    //-----------------CouponsActivity---------------------
    <string name="valid">Valid for:</string>
    <string name="day">d</string>
    <string name="hour">h</string>
    <string name="minute">m</string>
    <string name="empty">You don\'t have any coupons</string>

</resources>
