<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/gameplay_category">

        <ListPreference
            android:key="preferred_background"
            android:title="@string/background_title"
            android:defaultValue="dark"
            android:dialogTitle="@string/background_dialog_title"
            android:entries="@array/preferred_backgrounds_entries"
            android:entryValues="@array/preferred_backgrounds_values"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/general_category">

        <ListPreference
            android:key="preferred_language"
            android:title="@string/language_title"
            android:defaultValue="en"
            android:dialogTitle="@string/language_dialog_title"
            android:entries="@array/preferred_languages_entries"
            android:entryValues="@array/preferred_languages_values"/>

        <SwitchPreference
            android:key="preferred_vibration"
            android:title="@string/vibration_title"
            android:defaultValue="true"/>

        <Preference
            android:key="coupons"
            android:title="@string/coupons">

            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="hu.simon.taps.activities.CouponsActivity"
                android:targetPackage="hu.simon.taps" />

        </Preference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/other_category">

        <Preference
            android:title="@string/contact_us_title"
            android:summary="@string/email_address"/>

        <Preference
            android:key="current_version"
            android:title="@string/version_title"
            android:summary="" />

    </PreferenceCategory>

</PreferenceScreen>